Fix save button alignment in Firefox

--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
 .sfe-control {
     display: inline-block;
     margin-right: 1em;
+    vertical-align: bottom;
 }
 
 .sfe-input {
